--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -162,6 +162,89 @@ li:hover {
 	display: none;
 }
 
+.modal {
+	display: none;
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.3);
+	justify-content: center;
+	align-items: center;
+}
+
+.modal-content {
+	background: white;
+	width: 600px;
+	padding: 30px;
+	border-radius: 10px;
+	position: relative;
+	text-align: center;
+}
+
+.close {
+	position: absolute;
+	right: 20px;
+	top: 15px;
+	font-size: 24px;
+	cursor: pointer;
+}
+
+.modal-body {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 15px;
+    padding: 20px;
+}
+
+.modal-item {
+    position: relative;
+}
+
+.modal-item img {
+    width: 100%;
+    height: 125px;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.delete-btn {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    background: black;
+    color: white;
+    border: none;
+    padding: 6px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.delete-btn img {
+    width: 14px;
+    height: 14px;
+}
+
+.line {
+	width: 90%;
+    height: 2px;
+    background: #d3d3d3;
+    margin: 10px auto;
+    border-radius: 2px;
+}
+
+.add-photo-btn {
+	margin-top: 30px;
+	padding: 7px 30px;
+	background-color: #1D6154;
+	color: white;
+	border: none;
+	border-radius: 25px;
+	cursor: pointer;
+}
+
 .filters {
 	margin-top: 50px;
 	margin-bottom: 50px;
