Finition du Formulaire + pas de rechargement de pages à l'ajout et suppression

--- a/FrontEnd/assets/login.css
+++ b/FrontEnd/assets/login.css
@@ -141,6 +141,13 @@ padding-top: 15%;
 	cursor: pointer;
 }
 
+#error {
+	text-align: center;
+	color: red;
+	margin-top: 20px;
+	font-size: 15px;
+}
+
 input[type="submit"]{
 	font-family: 'Syne';
 	font-weight: 700;
