--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -31,6 +31,10 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
+header, footer, main {
+	max-width: 1140px;
+	margin:auto;
+}
 ol, ul {
 	list-style: none;
 }
@@ -48,7 +52,7 @@ table {
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
+	max-width: 100%;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
